@@ -277,6 +277,7 @@ test: check
 	@echo " All tests completed successfully"
 	@echo ""
 	@echo "################################################################"
+	@rm -f *.trs *.log t/*.log t/*.trs
 
 fulltest:
 	./t/test_all.pl
@@ -285,6 +286,7 @@ fulltest:
 	@echo " Full tests completed successfully"
 	@echo ""
 	@echo "################################################################"
+	@rm -f *.trs *.log t/*.log t/*.trs
 
 docs:
 	@if [ -z "$(DOS2UNIX)" ]; then \
