@@ -1,6 +1,7 @@
 This file documents the revision history for mod_gearman.
 
 next:
+          - add option for forbidden characters in command line
           - fix segfault on too old host checks
 
 1.5.2 Fri Feb 13 13:36:17 CET 2015
